[gd_scene load_steps=5 format=2]

[ext_resource path="res://demo/noto_sans_regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://demo/demo.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]

font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -472.0
margin_top = -260.0
margin_right = 472.0
margin_bottom = 260.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 314.0
margin_right = -314.0
custom_constants/separation = 20

[node name="LastLaunchLabel" type="Label" parent="VBoxContainer"]
margin_right = 316.0
margin_bottom = 23.0
text = "Last Launch: never"
align = 1

[node name="UserSettingsTitle" type="Label" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 316.0
margin_bottom = 66.0
custom_colors/font_color = Color( 1, 0.941176, 0.25098, 1 )
text = "User Settings"
align = 1

[node name="PlayerName" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 316.0
margin_bottom = 110.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/PlayerName"]
margin_right = 122.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
text = "Player Name"
align = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PlayerName"]
margin_left = 162.0
margin_right = 316.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SystemSettingsTitle" type="Label" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 316.0
margin_bottom = 153.0
custom_colors/font_color = Color( 1, 0.941176, 0.25098, 1 )
text = "System Settings"
align = 1

[node name="ViewDistance" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 173.0
margin_right = 316.0
margin_bottom = 196.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ViewDistance"]
margin_right = 122.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
text = "View Distance"
align = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/ViewDistance"]
margin_left = 162.0
margin_right = 316.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0
ticks_on_borders = true

[connection signal="text_changed" from="VBoxContainer/PlayerName/LineEdit" to="." method="_player_name_text_changed"]
[connection signal="value_changed" from="VBoxContainer/ViewDistance/HSlider" to="." method="_view_distance_value_changed"]
